package org.example.domain.interfaces;

public interface AparelhoTelefonico {

    public void ligar(String numero);
    public void atender(String telefone);

}
