package org.example.domain.utils;

public enum GeneroMusical {

    ELETRONICA,
    ROCK,
    JAZZ,
    COUNTRY,
    POP,
    HIPHOP,
    FUNK
}
